--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -9,11 +9,11 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md card-dashboard">
+        <div onclick="exibir_form('1')" class="col-md card-dashboard">
             <p class="text-card">Adicionar clientes</p>
         </div>
 
-        <div class="col-md card-dashboard">
+        <div onclick="exibir_form('2')" class="col-md card-dashboard">
             <p class="text-card">Atualizar cliente</p>
         </div>
 
@@ -70,6 +70,37 @@
         </form>
 
     </div>
+
+    <div id="att_cliente">
+        <p></p>
+        <select id="cliente-select" onchange="dados_cliente()" class="form-control">
+            {% for cliente in clientes %}
+            <option value="{{cliente.id}}">{{cliente.nome}}</option>
+            {% endfor %}
+        </select>
+        <br>
+        <hr>
+
+        <div id="form-att-cliente">
+            <input type="hidden" id="id">
+            <p>Nome:</p>
+            <input id="nome" type="text" class='form-control'>
+            <p>Sobrenome:</p>
+            <input id="sobrenome" type="text" class='form-control'>
+            <p>E-mail:</p>
+            <input id="email" type="text" class='form-control'>
+            <p>CPF:</p>
+            <input id="cpf" type="text" class='form-control'>
+            <br>
+            <input onclick="update_cliente()" type="submit" value="Salvar" class="btn btn-success">
+            <hr style="background-color: gray;">
+            <h2>Carros</h2>
+            <div id="carros">
+
+            </div>
+        </div>
+    </div>
+
 </div>
 <script src="{% static 'clientes/js/clientes.js' %}"></script>
 {% endblock %}
