--- a/templates/static/clientes/css/clientes.css
+++ b/templates/static/clientes/css/clientes.css
@@ -5,6 +5,7 @@
   margin-top: 40px;
   text-align: center;
   padding: 20px;
+  cursor: pointer;
 }
 
 .text-card {
@@ -24,4 +25,12 @@
   background-color: var(--dark-color);
   padding: 5px;
   font-size: 30px;
+}
+
+#att_cliente {
+  display: none;
+}
+
+#form-att-cliente {
+  display: none;
 }
