--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -74,6 +74,7 @@
     <div id="att_cliente">
         <p></p>
         <select id="cliente-select" onchange="dados_cliente()" class="form-control">
+            <option value="">Selecione o cliente para atualizar</option>
             {% for cliente in clientes %}
             <option value="{{cliente.id}}">{{cliente.nome}}</option>
             {% endfor %}
